force-app/main/default/objects/Division_Sub_Division_Matrix__mdt/Division_Sub_Division_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>Division Sub Division Matrix</label>
    <pluralLabel>Division Sub Division Matrix</pluralLabel>
</CustomObject>