force-app/main/default/objects/Division_Sub_Division_Matrix__mdt/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCP</fullName>
            </value>
            <value>
                <fullName>FSP</fullName>
                <default>true</default>
                <label>FSP</label>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Depositions</fullName>
            </value>
            <value>
                <fullName>Investigations</fullName>
            </value>
            <value>
                <fullName>eDiscovery</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
                <label>Records (FRR)</label>
            </value>
            <value>
                <fullName>Accounting</fullName>
                <label>Account Admin / Cash Apply /Accounting</label>
            </value>
            <value>
                <fullName>NY_Court_and_Process</fullName>
                <label>New York Court and Process</label>
            </value>
            <value>
                <fullName>Court_and_Process</fullName>
                <label>Court and Process (eFiling / Court / Process)</label>
            </value>
            <value>
                <fullName>Tier_1_Team</fullName>
                <isActive>false</isActive>
                <label>Tier_1_Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>