force-app/main/default/objects/Division_Sub_Division_Matrix__mdt/fields/Internal_SubDivision__c.field-meta.xml
<CustomField>
    <fullName>Internal_SubDivision__c</fullName>
    <label>Internal SubDivision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>