force-app/main/default/objects/Division_Sub_Division_Matrix__mdt/fields/Is_default_queue__c.field-meta.xml
<CustomField>
    <fullName>Is_default_queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is default queue</label>
    <type>Checkbox</type>
</CustomField>