force-app/main/default/objects/Division_Sub_Division_Matrix__mdt/fields/SubDivision__c.field-meta.xml
<CustomField>
    <fullName>SubDivision__c</fullName>
    <label>SubDivision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>