force-app/main/default/objects/Division_Sub_Division_Matrix__mdt/fields/SubDivision_Queue__c.field-meta.xml
<CustomField>
    <fullName>SubDivision_Queue__c</fullName>
    <label>SubDivision (Queue)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>