force-app/main/default/objects/Division_Sub_Division_Matrix__mdt/fields/User_Team_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>User_Team_Picklist_Value__c</fullName>
    <label>User Team Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>