force-app/main/default/objects/Division_Sub_Division_Matrix__mdt/listViews/Division_Sub_Division_Matrix_View.listView-meta.xml
<ListView>
    <fullName>Division_Sub_Division_Matrix_View</fullName>
    <columns>Division__c</columns>
    <columns>SubDivision__c</columns>
    <columns>Internal_SubDivision__c</columns>
    <columns>User_Team_Picklist_Value__c</columns>
    <columns>SubDivision_Queue__c</columns>
    <columns>Is_default_queue__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Display_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Division Sub-Division Matrix View</label>
</ListView>